# hw3_webserver

./: .gitignore  CMakeLists.txt  Makefile  client  client.c  client.sh  new_client  new_client.c  output.cgi  queue.c  queue.h  request.c  request.h  segel.c  segel.h  server  server.c
public/: output.cgi
